--- a/VidCoder/Resources/Translations/MainRes.pt.resx
+++ b/VidCoder/Resources/Translations/MainRes.pt.resx
@@ -172,7 +172,7 @@
     <value>Sair</value>
   </data>
   <data name="WindowsMenu" xml:space="preserve">
-    <value>Windows</value>
+    <value>Janelas</value>
     <comment>The label for the "Windows" menu that lists all the windows that can be opened (encoding, preview, log, etc)</comment>
   </data>
   <data name="EncodingSettingsMenuItem" xml:space="preserve">
