--- a/VidCoder/Resources/Translations/CommonRes.pt-BR.resx
+++ b/VidCoder/Resources/Translations/CommonRes.pt-BR.resx
@@ -130,7 +130,9 @@ Uma cópia completa da Licença Pública Geral GNU foi incluída neste programa.
   <data name="DefaultSubtitleToolTip" xml:space="preserve">
     <value>Marcar esta faixa de legenda como a padrão. Esta será apresentada durante a reprodução até que outra legenda seja escolhida.</value>
   </data>
-  
+  <data name="ForcedSubtitleToolTip" xml:space="preserve">
+    <value>Exibir apenas legendas forçadas de faixa(s) de legenda(s). Geralmente são pequenos trechos em diálogo estrangeiro.</value>
+  </data>
   <data name="OffsetSubtitleToolTip" xml:space="preserve">
     <value>A quantidade de tempo para avançar ou atrasar a exibição de uma legenda.</value>
   </data>
@@ -278,5 +280,7 @@ Uma cópia completa da Licença Pública Geral GNU foi incluída neste programa.
     <value>Primeiro</value>
     <comment>Choice to pick the first item in a list, like audio or subtitle tracks.</comment>
   </data>
-  
+  <data name="UpdatesDisabled32BitOSMessage" xml:space="preserve">
+    <value>As atualizações foram desabilitadas porque as novas versões não suportam mais sistemas operacionais de 32 bits.</value>
+  </data>
 </root>
