--- a/VidCoder/Resources/Translations/EncodingRes.de.resx
+++ b/VidCoder/Resources/Translations/EncodingRes.de.resx
@@ -288,12 +288,18 @@ Sie sollten dies festlegen, wenn Sie wissen, dass Ihr Wiedergabegerät nur ein b
   <data name="IncludeChapterMarkersCheckBox" xml:space="preserve">
     <value>Kapitelmarkierungen übernehmen</value>
   </data>
-  
+  <data name="TabHeader_Sizing" xml:space="preserve">
+    <value>Größe</value>
+  </data>
   <data name="TabHeader_VideoFilters" xml:space="preserve">
     <value>Videofilter</value>
   </data>
-  
-  
+  <data name="TabHeader_VideoEncoding" xml:space="preserve">
+    <value>Video-Encodierung</value>
+  </data>
+  <data name="TabHeader_AudioEncoding" xml:space="preserve">
+    <value>Audio-Encodierung</value>
+  </data>
   <data name="TabHeader_Advanced" xml:space="preserve">
     <value>Erweiterte Videoeinstellungen</value>
   </data>
@@ -969,27 +975,38 @@ Bikubisch: Dies ist ein durch OpenCL-Hardware beschleunigter Skalierungsalgorith
     <value>TrueHD</value>
   </data>
   <data name="InterlaceDetectionLabel" xml:space="preserve">
-    <value>Zeilensprung Erkennung:</value>
+    <value>Zeilensprungerkennung:</value>
   </data>
   <data name="ModeLabel" xml:space="preserve">
     <value>Modus:</value>
     <comment>Label for the sizing or padding mode.</comment>
   </data>
   <data name="AnamorphicCheckbox" xml:space="preserve">
-    <value>Benutze Anamorph</value>
+    <value>Anamorph verwenden</value>
   </data>
   <data name="AllowUpscalingCheckbox" xml:space="preserve">
-    <value>Erlaube hochskalierung</value>
+    <value>Hochskalierung erlauben</value>
   </data>
   <data name="SizingModeManual" xml:space="preserve">
     <value>Manuell</value>
     <comment>Choice for the user to enter all sizing information manually.</comment>
   </data>
-  
-  
-  
-  
-  
+  <data name="UpscaleMaxFormat" xml:space="preserve">
+    <value>Hochskalieren (max. {0}x)</value>
+    <comment>Label for scaling option to allow upscaling, but only to a particular multiple of the source resolution. {0} is the multiple, e.g. 2, 3 or 4</comment>
+  </data>
+  <data name="ScalingMode_DownscaleOnly" xml:space="preserve">
+    <value>Nur herunterskalieren</value>
+  </data>
+  <data name="ScalingMode_Fill" xml:space="preserve">
+    <value>Hoch-/Runterskalieren zum Ziel</value>
+  </data>
+  <data name="ScalingModeLabel" xml:space="preserve">
+    <value>Skalierungsmodus:</value>
+  </data>
+  <data name="PaddingMode_Fill" xml:space="preserve">
+    <value>Füllen</value>
+  </data>
   <data name="PaddingMode_Width" xml:space="preserve">
     <value>Breite</value>
   </data>
@@ -997,10 +1014,10 @@ Bikubisch: Dies ist ein durch OpenCL-Hardware beschleunigter Skalierungsalgorith
     <value>Höhe</value>
   </data>
   <data name="TargetWidthLabel" xml:space="preserve">
-    <value>Ziel Größe:</value>
+    <value>Zielbreite:</value>
   </data>
   <data name="TargetHeightLabel" xml:space="preserve">
-    <value>Ziel Höhe:</value>
+    <value>Zielhöhe:</value>
   </data>
   <data name="PadColorLabel" xml:space="preserve">
     <value>Farbe:</value>
@@ -1012,13 +1029,21 @@ Bikubisch: Dies ist ein durch OpenCL-Hardware beschleunigter Skalierungsalgorith
     <value>Standard</value>
   </data>
   <data name="ColorPickerStandardColorsHeader" xml:space="preserve">
-    <value>Standard Farben</value>
+    <value>Standardfarben</value>
   </data>
-  
+  <data name="AnamorphicToolTip" xml:space="preserve">
+    <value>Wenn Anamorph aktiviert ist, dann sind nicht-quadratische Pixel erlaubt. Das kann zu kleineren Dateien führen, wird aber nicht von allen Playern unterstützt.</value>
+  </data>
   <data name="ResolutionLabel" xml:space="preserve">
     <value>Auflösung:</value>
     <comment>Label for a video resolution in pixels.</comment>
   </data>
-  
-  
+  <data name="CustomFilterToolTipFormatPart" xml:space="preserve">
+    <value>Format: Schlüssel1=Wert1:Schlüssel2=Wert2:...</value>
+    <comment>The "format" portion of the custom filter tooltip. When translating, keep the = and : the same and only replace "key1", "value2", etc.</comment>
+  </data>
+  <data name="CustomFilterToolTipKeysLabel" xml:space="preserve">
+    <value>Schlüssel:</value>
+    <comment>The label for the "keys" portion of the custom filter tooltip.</comment>
+  </data>
 </root>
