--- a/VidCoder/Resources/Translations/EnumsRes.pt-BR.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.pt-BR.resx
@@ -129,8 +129,12 @@
   <data name="Anamorphic_Strict" xml:space="preserve">
     <value>Preciso</value>
   </data>
-  
-  
+  <data name="CombDetect_fast" xml:space="preserve">
+    <value>Rápido</value>
+  </data>
+  <data name="CombDetect_permissive" xml:space="preserve">
+    <value>Menos sensível</value>
+  </data>
   <data name="Custom" xml:space="preserve">
     <value>Personalizado</value>
   </data>
@@ -143,20 +147,49 @@
   <data name="Default" xml:space="preserve">
     <value>Padrão</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DeinterlacePreset_bob" xml:space="preserve">
+    <value>Bob</value>
+    <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
+  </data>
+  <data name="DeinterlacePreset_eedi2" xml:space="preserve">
+    <value>EEDI2</value>
+  </data>
+  <data name="DeinterlacePreset_eedi2bob" xml:space="preserve">
+    <value>EEDI2 Bob</value>
+  </data>
+  <data name="DeinterlacePreset_skipspatial" xml:space="preserve">
+    <value>Ignorar Verificação Espacial</value>
+  </data>
+  <data name="Deinterlace_Decomb" xml:space="preserve">
+    <value>Decomb</value>
+  </data>
+  <data name="Deinterlace_Yadif" xml:space="preserve">
+    <value>Yadif</value>
+  </data>
+  <data name="DenoisePreset_light" xml:space="preserve">
+    <value>Leve</value>
+  </data>
+  <data name="DenoisePreset_medium" xml:space="preserve">
+    <value>Médio</value>
+  </data>
+  <data name="DenoisePreset_strong" xml:space="preserve">
+    <value>Forte</value>
+  </data>
+  <data name="DenoisePreset_ultralight" xml:space="preserve">
+    <value>Ultraleve</value>
+  </data>
+  <data name="DenoiseTune_animation" xml:space="preserve">
+    <value>Animação</value>
+  </data>
+  <data name="DenoiseTune_film" xml:space="preserve">
+    <value>Filme</value>
+  </data>
+  <data name="DenoiseTune_grain" xml:space="preserve">
+    <value>Granulação</value>
+  </data>
+  <data name="DenoiseTune_highmotion" xml:space="preserve">
+    <value>High Motion</value>
+  </data>
   <data name="Denoise_HQDN3D" xml:space="preserve">
     <value>hqdn3d</value>
   </data>
